--- a/trunk/svn/hacking.html
+++ b/trunk/svn/hacking.html
@@ -70,71 +70,64 @@ $LastChangedDate: 2008-06-10 10:56:53 +0800 (星期二, 10 六月 2008) $
 
 
 <div class="h2" id="participating" title="participating">
-<h2>Participating in the community</h2>
+<h2>参与社区</h2>
 
-<p>Although Subversion is originally sponsored and hosted by CollabNet
-(<a href="http://www.collab.net">http://www.collab.net</a>), it's a
-true open-source project under a BSD-style license.  A number of
-developers work for CollabNet, some work for other large companies
-(such as RedHat), and many others are simply excellent volunteers who
-are interested in building a better version control system.</p>
+<p>尽管Subversion本来由CollabNet 
+(<a href="http://www.collab.net">http://www.collab.net</a>)发起和主办, 
+但它是一个符合BSD许可协议的完全开源项目.  大量的开发者为CollabNet工作，
+一些开发者为其他大公司工作（例如RedHat），更多的其他优秀志愿者仅仅是为
+了建立一个更好的版本控制系统感兴趣而参加这个项目。
+</p>
 
-<p>The community exists mainly through mailing lists and a Subversion
-repository.  To participate:</p>
-
-<p>Go to <a href="http://subversion.tigris.org/"
->http://subversion.tigris.org/</a> and</p>
+<p>社区主要通过邮件列表和Subversion仓库来交流
+repository.  </p>
+<p>参与请访问网站<a href="http://subversion.tigris.org/"
+>http://subversion.tigris.org/</a>并且 </p>
 
 <ul>
-<li><p>Join the "dev", "svn", and "announce" mailing lists.
-       The dev list, dev@subversion.tigris.org, is where almost all
-       discussion takes place.  All development questions should go
-       there, though you might want to check the list archives first.
-       The "svn" list receives automated commit emails.</p></li>
+<li><p>加入 "dev", "svn", 和 "announce"邮件列表 . 开发邮件列表, 
+dev@subversion.tigris.org, 几乎所有的讨论都发生在这里，所有的开发问题
+都应当在这里，虽然你可能需要首先检查列表归档，”svn”邮件列表接受自动提
+交emails 
+</p></li>
 
-<li><p>Get a copy of the latest development sources from
+<li><p>可以在
        <a href="http://svn.collab.net/repos/svn/trunk/"
-               >http://svn.collab.net/repos/svn/trunk/</a>.
+               >http://svn.collab.net/repos/svn/trunk/</a>得到最新的源码.
        <br />
-       New development always takes place on trunk.  Bugfixes,
-       enhancements, and new features are backported from there to the
-       various release branches.</p></li> 
+       新的开发始终在主干上发生.  Bug修改，增强，和新特性都是从主干上移
+       植到各种发布分支上.</p></li> 
 </ul>
 
-<p>There are many ways to join the project, either by writing code, or
-by testing and/or helping to manage the bug database.  If you'd like
-to contribute, then look at:</p>
+<p>有多种方法可以加入这个工程，例如写代码，测试，或者帮助管理bug数据库。
+如果你想参与贡献，可以浏览以下两个网址:</p>
 
 <ul>
-<li><p>The bugs/issues database
+<li><p>bugs/issues数据库
        <a href="http://subversion.tigris.org/issue-tracker.html"
                >http://subversion.tigris.org/issue-tracker.html</a></p></li>
 
-<li><p>The bite-sized tasks page
+<li><p>大小合适的任务
        <a href="http://subversion.tigris.org/project_tasks.html"
                >http://subversion.tigris.org/project_tasks.html</a></p></li>
 </ul>
 
-<p>To submit code, simply send your patches to
-dev@subversion.tigris.org.  No, wait, first read the rest of this
-file, <i>then</i> start sending patches to
+<p>T提交代码，仅仅发送你的补丁包到
+dev@subversion.tigris.org.  不，等等，首先要读完这个文件的其他部分
+，然后再开始发送补丁到
 dev@subversion.tigris.org. :-)</p>
 
-<p>To help manage the issues database, read over the issue summaries,
-looking and testing for issues that are either invalid, or are
-duplicates of other issues.  Both kinds are very common, the first
-because bugs often get unknowingly fixed as side effects of other
-changes in the code, and the second because people sometimes file an
-issue without noticing that it has already been reported.  If you are
-not sure about an issue, post a question to dev@subversion.tigris.org.
+<p>为了帮助管理问题数据库, 需要重读问题概要，寻找和测试问题是否有效或者同
+其他问题重复。这两种现象非常普遍，首先因为bug经常会在其他代码修改中不
+知不觉的修改了，其次人们有时会提交一个问题，而没有注意到这个问题已经
+被报告了。如果你不确定这个问题，在邮件列表  dev@subversion.tigris.org 中提交问题.
 ("Subversion: We're here to help you help us!")</p>
 
-<p>Another way to help is to set up automated builds and test suite
-runs of Subversion on some platform, and have the output sent to the
-svn-breakage@subversion.tigris.org mailing list.  See more details at
+<p>另一种帮助是建立自动构建和测试套件，并在一种平台上运行，然后把输
+出发给svn-breakage@subversion.tigris.org邮件列表，可以在网址
 <a href="http://subversion.tigris.org/servlets/ProjectMailingListList"
         >http://subversion.tigris.org/servlets/ProjectMailingListList</a>
-in the description for the svn-breakage list.</p>
+看到关于 svn-breakage邮件列表更详细的信息.</p>
 
 </div>
 
