--- a/svn/faq.html
+++ b/svn/faq.html
@@ -2208,62 +2208,48 @@ svn cleanup working-copy
 
 
 <div class="h3" id="wc-out-of-date" title="wc-out-of-date">
-<h3>I'm trying to commit, but Subversion says my
-working copy is out of date?</h3>
+<h3>我试图去提交，但是Subversion说我的工作拷贝是过时的？</h3>
 
-<p>Three kinds of situation that can cause this:</p>
+<p>三种情况下会出现这个问题</p>
 
 <ol>
 
-<li><p>Debris from a failed commit is littering your working copy.</p>
+<li><p>提交失败导致了你的工作拷贝被破环。</p>
 
-    <p>You may have had a commit that went sour between the time the
-    new revision was added in the server and the time your client
-    performed its post-commit admin tasks (including refreshing your
-    local text-base copy).  This might happen for various reasons
-    including (rarely) problems in the database back end or (more
-    commonly) network dropouts at exactly the wrong time.</p>
+    <p>在你提交时，新版本被添加到服务器上，然后你的客户端执行提交后的
+    管理任务（包括刷新本地拷贝）。在第二个操作之前，你的提交处在一个“过期”
+    的状态之中。导致这种情况发生的原因有，（极少数情况下）数据库一端出现
+    了问题，（大多数情况下）网络在错误的时间中断了。</p>
 
-    <p>If this happens, it's possible that you have already committed
-    the very changes you are trying now to commit.  You can use 'svn
-    log -rHEAD' to see if your supposed-failed commit actually
-    succeeded.  If it did, run 'svn revert' to revert your local
-    changes, then run 'svn update' to get your own changes back from the
-    server.  (Note that only 'svn update' brings your local copies
-    up-to-date; revert doesn't do that.)</p>
+    <p>这时，很可能你的提交已经成功了。你可以执行"svn log -rHEAD"来查看
+    提交是否真的成功了。如果成功了，执行“svn revert”，回退本地修改，然后
+    执行“svn update”来取回你已经提交的修改。（注意，“svn update”能更新你的
+    本地拷贝，而revert不能。）</p>
 </li>
 
-<li><p>Mixed revisions.</p>
+<li><p>版本混杂。</p>
 
-     <p>When Subversion commits, the client only bumps the revision
-     numbers of the nodes the commit touches, not all nodes in the
-     working copy.  This means that in a single working copy, the
-     files and subdirectories might be at different revisions,
-     depending on when you last committed them.  In certain operations
-     (for example, directory property modifications), if the
-     repository has a more recent version of the node, the commit will
-     be rejected, to prevent data loss.  See <a
+     <p>提交的时候，在客户端的工作拷贝中，只有此次提交涉及的节点会被更新，
+     而不是所有节点。这意味着，你最后一次提交决定你的工作拷贝中了文件和目录
+     的版本号，他们可能不是同一版本。对于像修改目录属性等特定操作，如果版本库
+     中有更新的版本，你的提交会被拒绝，以防止数据丢失。详细请见<a
      href="http://svnbook.red-bean.com/svnbook/ch02s03.html#svn-ch-2-sect-3.4">
-     The Limitations of Mixed Revisions</a> in the <a
+     版本混杂的局限</a>在<a
      href="http://svnbook.red-bean.com/">Version Control with
-     Subversion</a> for details.</p>
+     Subversion</a>中。</p>
 
-     <p>You can fix the problem by running 'svn update' in the working
-     copy.</p>
+     <p>执行'svn update'可以解决这个问题。</p>
 </li>
 
-<li><p>You might be genuinely out of date&nbsp;&mdash;&nbsp;that is,
-    you're trying to commit a change to a file that has been changed
-    by someone else since you last updated your copy of that file.
-    Again, 'svn update' is the way to fix this.</p>
+<li><p>你的版本可能确实是过时的&nbsp;&mdash;&nbsp;即在你提交的时候，有人基于你的
+    上一次改动又作了更新。执行'svn update'来解决这个问题.</p>
 </li>
 </ol>
 </div>
 
 
 <div class="h3" id="obstructed-add" title="obstructed-add">
-<h3>I've contributed a patch to a project and the patch added a new file.
-Now <tt>svn update</tt> does not work.</h3>
+<h3>我向我的工程里添加了一个补丁，这个补丁添加了一个新文件，现在<tt>svn update</tt>不能工作了。</h3>
 
 <p>In order to include your new file in the patch you likely ran the <tt>svn add</tt>
 command so that the <tt>svn diff</tt> command would include the new file in the patch.
@@ -2286,29 +2272,18 @@ the file in your working copy.  The steps to correct this problem are:</p>
 
 
 <div class="h3" id="unrecognized-url-error" title="unrecognized-url-error">
-<h3>I just built the distribution binary,
-and when I try to check out Subversion, I get an error about an
-"Unrecognized URL scheme."  What's up with that?</h3>
+<h3>我编译了Subversion的发行版，当我试图check out的时候，我得到一个错误"Unrecognized URL scheme."这时怎么回事呢?</h3>
 
-<p>Subversion uses a plugin system to allow access to repositories.
-Currently there are three of these plugins: ra_local allows access to
-a local repository, ra_dav which allows access to a repository via
-WebDAV, and ra_svn allows local or remote access via the svnserve
-server.  When you attempt to perform an operation in Subversion, the
-program tries to dynamically load a plugin based on the URL scheme.  A
-`file://' URL will try to load ra_local, and an `http://' URL will try
-to load ra_dav.</p>
+<p>Subversion使用了插件系统来访问版本库.现在支持三个插件:ra_local支持访问
+本地版本库,ra_dav支持通过WebDAV访问版本库,ra_svn支持通过svnserver服务器访问
+远程或本地的版本库.当你执行Subversion的操作时,会根据URL scheme来决定加载
+哪一个插件.以`file://'开头的URL会加载ra_local,`http://'开头的URL会加载ra_dav.</p>
 
-<p>The error you are seeing means that the dynamic linker/loader can't find
-the plugins to load.  This normally happens when you build Subversion with
-shared libraries, then attempt to run it without first running 'make
-install'.  Another possible cause is that you ran make install, but the
-libraries were installed in a location that the dynamic linker/loader
-doesn't recognize.  Under Linux, you can allow the linker/loader to find the
-libraries by adding the library directory to /etc/ld.so.conf and running
-ldconfig.  If you don't wish to do this, or you don't have root access, you
-can also specify the library directory in the LD_LIBRARY_PATH environment
-variable.</p>
+<p>你看到的错误是说无法找到正确的插件.发生这个问题,通常是因为你将Subversion的库文件
+编译成动态库后,却没有执行'make install'.或者虽然你执行了'make install',但是
+操作系统还是找不到Subversion的动态库所在的路径.在Linux系统中,你可以把相应的路径
+加入到/etc/ld.so.conf中,然后运行ldconfig.如果你不想这么作,又或者你没有root权限,
+你可以在LD_LIBRARY_PATH中指定相应的路径.</p>
 
 </div>
 
@@ -2324,44 +2299,40 @@ variable.</p>
 
 
 <div class="h3" id="configure-sed-error" title="configure-sed-error">
-<h3>When I run `<tt>configure</tt>', I get errors about
-<tt>subs-1.sed&nbsp;line&nbsp;38:&nbsp;Unterminated&nbsp;`s'&nbsp;command</tt>.
-What's wrong?</h3>
+<h3>当我运行`<tt>configure</tt>'命令时，出现一些错误
+<tt>subs-1.sed&nbsp;line&nbsp;38:&nbsp;Unterminated&nbsp;`s'&nbsp;command</tt>。
+这是怎么回事？</h3>
 
 <p>
-You probably have old copies of
-<tt>/usr/local/bin/apr-config</tt> and
-<tt>/usr/local/bin/apu-config</tt> on your system.  Remove them, make
-sure the <tt>apr/</tt> and <tt>apr-util/</tt> that you're
-building with are completely up-to-date, and try again.
+可能你系统里的
+<tt>/usr/local/bin/apr-config</tt>和
+<tt>/usr/local/bin/apu-config</tt>太旧了.删了它们,更新<tt>apr/</tt>和<tt>apr-util/</tt>,
+使其和你编译的版本保持一致,再重新编译.
 </p>
 
 </div>
 
  
 <div class="h3" id="windows-msvc-build" title="windows-msvc-build">
-<h3>I'm having trouble building Subversion
-under Windows with MSVC++ 6.0.  What should I do?</h3>
+<h3>我在Windows下用MSVC++6.0构建Subversion时候有些麻烦，我该怎么办？</h3>
 
 <p>
-Probably you just need to get the latest platform SDK.  The one that
-ships with VC++ 6.0 is not recent enough.
+可能你需要最新版本的platform SDK.VC++ 6.0带的SDK太旧了.
 </p>
 
 </div>
 
 
 <div class="h3" id="windows-drive-letter" title="windows-drive-letter">
-<h3>How can I specify a Windows drive letter in
-a <tt>file:</tt> URL?</h3>
+<h3>我如何在<tt>file:</tt>格式的URL中指定Windows盘符?</h3>
 
-<p>Like this:</p>
+<p>像这样:</p>
 <pre>
 svn import file:///d:/some/path/to/repos/on/d/drive
 </pre>
-<p>See <a
+<p>更多细节请见Subversion书中的<a
 href="http://svnbook.red-bean.com/html-chunk/ch02s03.html#svn-ch-2-sidebar-1">
-Repository URLs</a> in the Subversion Book for more details.</p>
+Repository URLs</a>.</p>
 
 </div>
 
@@ -2382,7 +2353,7 @@ SVN_ASP_DOT_NET_HACK to any value&nbsp;&mdash;&nbsp;this will tell
 Windows clients to use "_svn" as a directory name in your working
 copy.  See <a
 href="http://subversion.tigris.org/svn_1.3_releasenotes.html#_svn-hack"
->the relevant section of the Subversion 1.3 release notes</a> for more
+>the relevant section of the Subversion 1.3 release notes</a> for more=
 details, and see <a href="#adm-dir">this question</a> for other ways to
 customize the administrative directory name.</p>
 
