--- a/trunk/svn/tools_contrib.html
+++ b/trunk/svn/tools_contrib.html
@@ -299,13 +299,13 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="diff3wrap_bat"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/diff3wrap.bat">diff3wrap.bat</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>Wrapper for running a diff3/merge program.</p>
+  <p>运行diff3/merge的包裹程序。</p>
 
 
   <h3><a name="diffwrap_bat"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/diffwrap.bat">diffwrap.bat</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>Wrapper for running a diff program.</p>
+  <p>运行diff的包裹程序。</p>
 
 
   <h3><a name="dsvn_el"
@@ -319,7 +319,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="svnmucc_c"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svnmucc/svnmucc.c">svnmucc.c</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svnmucc">contrib/client-side/svnmucc</a>)</h3>
-  <p>多个URL命令的客户端（Multiple URL Command Client）：可以将通过URL方式提交的一系列mv，cp和rm命令合并成一个提交命令。
+  <p>多URL命令行客户端（Multiple URL Command Client）：可以将对URL的一系列mv，cp和rm命令合并成为一个单独的提交。
   </p>
   <p>相关文件:
     <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svnmucc/svnmucc-test.py">svnmucc-test.py</a>
@@ -356,7 +356,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="svn_clean"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn-clean">svn-clean</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>从SVN的工作拷贝中删除没有版本记录的所有文件。</p>
+  <p>从SVN的工作拷贝中删除未版本化的所有文件。</p>
 
 
   <h3><a name="svn_graph_pl"
